(copy_files# ocaml_to_clambda/*.{ml,mli})

(executable
 (name ocaml_to_clambda)
 (modules ocaml_to_clambda clambdacompile)
 (libraries ocaml-compiler-libs.optcomp clambda_frontend))


(executable
 (name clambda_to_wasm)
 (modules clambda_to_wasm)
 (libraries ocaml-compiler-libs.optcomp clambda_frontend sexplib))
