(copy_files# ocaml_to_clambda/*.{ml,mli})

(executable
 (name ocaml_to_clambda)
 (modules ocaml_to_clambda clambdacompile)
 (libraries ocaml-compiler-libs.optcomp clambda_frontend))

(executable
 (name clambda_to_wasm)
 (modules clambda_to_wasm)
 (libraries ocaml-compiler-libs.optcomp clambda_frontend sexplib ir))


(executable
 (name flambda_to_wasm)
 (modules flambda_to_wasm)
 (libraries flambda sexplib ir))

